--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tauri-apps/api": "^1.0.0-beta.1",
     "@tauri-apps/cli": "^1.0.0-beta.2",
     "cross-env": "^7.0.3",
-    "electron-is-dev": "^1.0.1",
+    "electron-is-dev": "^2.0.0",
     "file-saver": "^2.0.0",
     "react": "^16.9.0",
     "react-color": "^2.17.3",
@@ -39,7 +39,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint-fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://127.0.0.1:3000 && electron .\"",
     "electron-pack": "build -c.extraMetadata.main=build/electron.js",
     "preelectron-pack": "yarn build",
     "manage:translations": "node ./src/translations/manage.js"
@@ -68,9 +68,9 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "bootstrap": "4.5",
-    "concurrently": "^5.0.0",
-    "electron": "^11.1",
-    "electron-builder": "^22.9.0",
+    "concurrently": "^8.2.2",
+    "electron": "^28.1",
+    "electron-builder": "^24.9",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.2",
@@ -83,6 +83,6 @@
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3",
     "typescript-react-intl": "^0.4.0",
-    "wait-on": "^3.2.0"
+    "wait-on": "^7.2.0"
   }
 }
