--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,11 +32,11 @@ pages:
     - apt-get update -qq && apt-get install -y hugo python3 python3-toml python3-yaml
   script:
     - make -C website build  # Build landing page into website/public/.
-    - make apply-beta-basename  # Overwrite settings so the Router works in deployment.
-    - make build  # Build beta application into build/.
+    - make apply-latest-basename  # Overwrite settings so the Router works in deployment.
+    - make build  # Build latest application into build/.
     - rm -rf public/  # Remove the folder with the same name.
     - mv website/public public  # Put the landing site in place.
-    - mv build public/releases/beta  # Put the beta application in place.
+    - mv build public/releases/latest  # Put the application in place.
   artifacts:
     paths:
       - public
