--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ cache:
 
 before_script:
   - yarn config set cache-folder .yarn
-  - yarn install
+  - yarn install --frozen-lockfile --prefer-offline
 
 tests:
   stage: test
@@ -28,7 +28,7 @@ pages:
   stage: deploy
   before_script:
     - yarn config set cache-folder .yarn
-    - yarn install
+    - yarn install --frozen-lockfile --prefer-offline
     - apt-get update -qq && apt-get install -y hugo python3 python3-toml python3-yaml
   script:
     - make -C website build  # Build landing page into website/public/.
