--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tauri-apps/api": "^1.0.0-beta.1",
-    "@tauri-apps/cli": "^1.0.0-beta.2",
     "cross-env": "^7.0.3",
-    "electron-is-dev": "^2.0.0",
     "file-saver": "^2.0.0",
     "json-rpc-2.0": "^1.7.0",
     "react": "^16.9.0",
@@ -32,7 +29,6 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.45.0"
   },
-  "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "CI=false react-scripts --openssl-legacy-provider build",
@@ -40,13 +36,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
     "lint-fix": "eslint --fix --ext .js,.jsx,.ts,.tsx src/",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://127.0.0.1:3000 && electron .\"",
-    "electron-pack": "build -c.extraMetadata.main=build/electron.js",
-    "preelectron-pack": "yarn build",
-    "manage:translations": "node ./src/translations/manage.js"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "manage:translations": "node src/translations/manage.cjs"
   },
   "browserslist": [
     ">0.2%",
@@ -55,6 +45,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.10.3",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
     "@types/node": "^12.12.14",
@@ -70,11 +61,9 @@
     "@typescript-eslint/parser": "^6.16.0",
     "bootstrap": "4.5",
     "concurrently": "^8.2.2",
-    "electron": "^28.1",
-    "electron-builder": "^24.9",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.1",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-intl-translations-manager": "^5.0.3",
