--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
-  "name": "openlifter",
-  "version": "1.4",
+  "name": "openlifter-net",
+  "version": "0.1",
   "homepage": "./",
   "router_basename": "/",
-  "author": "Sean Stangl <sean.stangl@gmail.com>",
-  "description": "Simple software for running a local powerlifting competition",
+  "author": "Lars Eppinger <lars@eppinger.dev>",
+  "description": "Openlifter, but over the network!",
   "license": "AGPL-3.0-or-later",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/react-bootstrap": "^0.32.37",
     "cross-env": "^7.0.3",
     "file-saver": "^2.0.0",
     "json-rpc-2.0": "^1.7.0",
-    "react": "^16.9.0",
+    "react": "^18.3.1",
     "react-color": "^2.17.3",
     "react-datepicker": "^3.0.0",
-    "react-dom": "^16.8.0",
+    "react-dom": "^18.3.1",
     "react-intl": "^5.0.0",
     "react-popper": "^1.3.4",
-    "react-redux": "^8.0.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-select": "^3.0.8",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2",
     "sass": "^1.45.0"
   },
   "scripts": {
@@ -49,10 +48,10 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.11",
     "@types/node": "^12.12.14",
-    "@types/react": "^16.8.23",
+    "@types/react": "^18.3.3",
     "@types/react-color": "^3.0.10",
     "@types/react-datepicker": "^3.0.0",
-    "@types/react-dom": "^16.8.4",
+    "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
     "@types/react-router-bootstrap": "^0.26.6",
     "@types/react-select": "^3.0.8",
@@ -65,7 +64,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.1",
-    "react-bootstrap": "^1.0.0-beta.10",
+    "react-bootstrap": "^2.10.4",
     "react-intl-translations-manager": "^5.0.3",
     "react-router-bootstrap": "^0.26.2",
     "redux-devtools-extension": "^2.13.8",
