--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "@types/redux-mock-store": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "bootstrap": "4.5",
+    "bootstrap": "~4.5",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "~1.6.8",
     "react-intl-translations-manager": "^5.0.3",
     "react-router-bootstrap": "^0.26.2",
     "redux-devtools-extension": "^2.13.8",
